--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ title: "Dan Fitz"
 description: "Blog posts about web development and life in general"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: ""
+baseurl: ''
+google_analytics: 'UA-145432763-1'
 include: ["_pages"]
 permalink: /:title/
 
