--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'UA-145432763-1'
+disqus: 'danfitz'
 include: ["_pages"]
 permalink: /:title/
 
